<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <ImageView-->
<!--            android:id="@+id/imageView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="80dp"-->
<!--            app:srcCompat="@drawable/progress_bar2" />-->
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/cerTitle"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <ImageView
        android:id="@+id/phone_num"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@drawable/text_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageView
        android:id="@+id/cer_num"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/text_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_num" />

    <ImageView
        android:id="@+id/regist_submit"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/text_form"
        app:layout_constraintStart_toEndOf="@+id/phone_num"
        app:layout_constraintTop_toTopOf="@+id/phone_num" />


    <ImageView
        android:id="@+id/regist_resubmit"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/regist_submit"
        app:layout_constraintEnd_toEndOf="@+id/regist_submit"
        app:layout_constraintStart_toStartOf="@+id/regist_submit"
        app:layout_constraintTop_toTopOf="@+id/phone_num"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6dp"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editcernum" />

    <ImageView
        android:id="@+id/cer_next_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cer_num"
        app:srcCompat="@drawable/submit_box" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:letterSpacing="0.02"

        android:lineSpacingExtra="10dp"
        android:text="@string/cer_Login"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="@+id/cer_next_btn"
        app:layout_constraintEnd_toEndOf="@+id/cer_next_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cer_next_btn"
        app:layout_constraintTop_toTopOf="@+id/cer_next_btn"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/cer_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/phone_num"
        app:layout_constraintStart_toStartOf="@+id/phone_num"
        app:layout_constraintTop_toTopOf="@+id/phone_num" />

    <EditText
        android:id="@+id/editcernum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/cer_num"
        android:inputType="number"
        android:maxLength="6"
        android:textSize="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/cer_num"
        app:layout_constraintStart_toStartOf="@+id/cer_num"
        app:layout_constraintTop_toTopOf="@+id/cer_num" />

    <TextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:text="@string/submit"
        android:textSize="12sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/regist_submit"
        app:layout_constraintEnd_toEndOf="@+id/regist_submit"
        app:layout_constraintStart_toStartOf="@+id/regist_submit"
        app:layout_constraintTop_toTopOf="@+id/regist_submit" />

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:text="@string/resubmit"
        android:textColor="#31A9F3"
        android:textSize="16dp"
        android:textStyle="normal|bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/regist_submit"
        app:layout_constraintEnd_toEndOf="@+id/regist_submit"
        app:layout_constraintStart_toStartOf="@+id/regist_submit"
        app:layout_constraintTop_toTopOf="@+id/regist_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>