<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/proTitle"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <ImageView
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/text_field" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@color/white"
        android:padding="0.5dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6dp"
        android:text="@string/pro_nick"
        android:textSize="12dp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toTopOf="@+id/nickname"/>

    <EditText
        android:id="@+id/setnickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="@+id/nickname"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toTopOf="@+id/nickname"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/pw_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6dp"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="430dp" />

    <ImageView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:srcCompat="@drawable/text_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@color/white"
        android:padding="0.5dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6dp"
        android:text="@string/pro_email"
        android:textSize="12dp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email"/>

    <ImageView
        android:id="@+id/finish_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:srcCompat="@drawable/blue_btn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:background="#00FFFFFF"
        android:gravity="center_horizontal"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="8dp"
        android:text="@string/pro_finish"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/finish_btn"
        app:layout_constraintEnd_toEndOf="@+id/finish_btn"
        app:layout_constraintStart_toStartOf="@+id/finish_btn"
        app:layout_constraintTop_toTopOf="@+id/finish_btn" />

    <EditText
        android:id="@+id/setEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>